fixed vercel issues

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <body>
     <div class="container">
       <header class="header">
-        <img src="src/img/logo.png" alt="Logo" class="header__logo" />
+        <h2 class="logo">LoyaList JS</h2>
         <form class="search">
           <input
             type="text"
             class="search__field"
-            placeholder="Search over 1,000,000 recipes..."
+            placeholder="Search Your Booked Cabin"
           />
           <button class="btn search__btn">
             <svg class="search__icon">
@@ -40,7 +40,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--cart">
                 <svg class="nav__icon">
-                  <use href="src/img/icons.svg#icon-edit"></use>
+                  <use href="src/img/icons.svg#icon-shopping-bag"></use>
                 </svg>
                 <span class="guest-number">Your Cart</span>
               </button>
