--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <script type="module" src="src/js/controller.js"></script> -->
     <script type="module" src="/src/js/controller.js"></script>
 
-    <title>Recipe // Search over 1,000,000 recipes</title>
+    <title>LoyaList JS</title>
   </head>
 
   <body>
