added a star rating feature

--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
       </div>
 
       <div class="cabins">
-        <div class="message">
+        <!-- <div class="message">
           <div>
             <svg>
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
           <p>Have fun!</p>
-        </div>
+        </div> -->
 
         <!-- <div class="spinner">
           <svg>
