fixed assets issues

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           />
           <button class="btn search__btn">
             <svg class="search__icon">
-              <use href="src/img/icons.svg#icon-search"></use>
+              <use href="img/icons.svg#icon-search"></use>
             </svg>
             <span>Search</span>
           </button>
@@ -40,7 +40,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--cart">
                 <svg class="nav__icon">
-                  <use href="src/img/icons.svg#icon-shopping-bag"></use>
+                  <use href="img/icons.svg#icon-shopping-bag"></use>
                 </svg>
                 <span class="guest-number">Your Cart</span>
               </button>
@@ -48,7 +48,7 @@
             <li class="nav__item">
               <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
-                  <use href="src/img/icons.svg#icon-bookmark"></use>
+                  <use href="img/icons.svg#icon-bookmark"></use>
                 </svg>
                 <span>Bookmarks</span>
               </button>
@@ -57,7 +57,7 @@
                   <div class="message">
                     <div>
                       <svg>
-                        <use href="src/img/icons.svg#icon-smile"></use>
+                        <use href="img/icons.svg#icon-smile"></use>
                       </svg>
                     </div>
                     <p>
