--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="vite.svg" type="image/x-icon" />
 
     <link rel="stylesheet" href="src/sass/main.scss" />
     <!-- <script type="module" src="src/js/controller.js"></script> -->
